Correct the z-index of navigation

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -3,7 +3,7 @@ $pink: #ff5a6e;
 .headerContainer {
     position: fixed;
     width: 100%;
-    z-index: 999;
+    z-index: 9999;
     transition: all 0.3s ease-in-out;
 
 }
@@ -153,7 +153,7 @@ ul {
     .headerContainer {
         position: fixed;
         width: 100%;
-        z-index: 999;
+        z-index: 99999;
         
 
     }
@@ -161,6 +161,7 @@ ul {
         background-color: white;
         justify-content: space-between;
         width: 100%;
+        z-index: 99999;
         
         .navLinks{
             display: none;
